# qa_rag_chatbot

./: README.md  main.py  pyproject.toml  vector_index.pkl
chroma_store/: chroma.sqlite3
data/: news.json
services/: news.py  qa.py  vectorstore.py
