[project]
name = "crypto-qa-chatbot"
version = "0.1.0"
description = "A chatbot for answering crypto questions with context."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "numpy>=2.3.2",
    "openai>=1.102.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.0",
    "uvicorn>=0.35.0",
]
